--- a/Views/Product/Delete.cshtml
+++ b/Views/Product/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Product
 
-<form method="post" asp-action="DeletePost">
+<form method="post">
     <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
@@ -27,19 +27,49 @@
 
                 </div>
                 <div style="margin-bottom: 1rem;" class="row">
-                    <div class="col-8 offset-4 row">
+                    <div class="col-4">
+                        <label asp-for="Description" class="col-sm-6 col-form-label"></label>
+                    </div>
+                    <div class="col-8">
+                        <textarea asp-for="Description" class="form-control summernote"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
 
-                        <div class="col">
-                            <input type="submit" class="btn btn-danger w-100" value="Delete" />
-                        </div>
-                        <div class="col">
-                            <a asp-action="Index" class="btn btn-success w-100">Back</a>
-                        </div>
+                </div>
+                <div style="margin-bottom: 1rem;" class="row">
+                    <div class="col-4">
+                        <label asp-for="CategoryId"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="Category.Name" disabled class="form-control" />
+                    </div>
+                </div>
+                <div style="margin-bottom: 1rem;" class="row">
+                    <div class="col-4">
+                        <label asp-for="ApplicationId"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="ApplicationType.Name" disabled class="form-control" />
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 @* Keep this empty *@
+                @if (Model.Id != 0)
+                {
+                    <img src="@WC.ImagePath@Model.Image" width="100%" style="border-radius:5px; border:1px solid #bbb" />
+                }
+            </div>
+            <div style="margin-bottom: 1rem;" class="row">
+                <div class="col-8 offset-4 row">
+
+                    <div class="col">
+                        <input type="submit" class="btn btn-danger w-100" value="Delete" />
+                    </div>
+                    <div class="col">
+                        <a asp-action="Index" class="btn btn-success w-100">Back</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
