--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,13 +27,12 @@
             $(".filter-button").click(function () {
 
                 var value = $(this).attr('data-filter');
-                if (value == "all") {
+                if (value == "All") {
                     $('.filter').show('1000');
                 }
                 else {
                     $(".filter").not('.' + value).hide('3000');
                     $('.filter').filter('.' + value).show('3000');
-
                 }
             });
 
